# ComputerVisionProjects

./: .gitignore  LICENSE  README.md  pyproject.toml
Breeds_project/: BeagleVsOthers_Project_ComputerVision.ipynb  beagleVSothers_da_newmodel.ipynb  beagleVSothers_without_da_RESNET50.ipynb  beagleVSothers_without_da_newmodel.ipynb  beagle_vs_others_da_RESNET50.ipynb  main.py  ~$Presentation_computer_vision_project.pptx
Breeds_project/CV_project/: Analysis_CV_project.xlsx  BeagleVsOthers_Project_ComputerVision.ipynb
Breeds_project/model/: model.py  nn_model.py
Breeds_project/pre_processing/: __init__.py  show_images.py  transform_images.py  transform_split_data.py
Pilar_project/model/: nn_model.py
pre_processing/: model_pytorch.py  nn_model.py  transform_images.py  transform_photos.py  transform_split_data.py
