[tool.poetry]
name = "ComputerVisionProjects"
version = "0.1.0"
description = "Helper to develop a project to Computer Vision."
authors = ['Andreia Sousa']

[tool.poetry.dependencies]
python = "3.8.*"

numpy = "^1.21.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
types-ujson = "^0.1.1"
opencv-python = "^4.5.4.58"
matplotlib = "^3.4.3"


explore = ["ipykernel"]

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.902"
networkx = "^2.5"
pandas = "^1.3.0"
pydocstyle = "^6.1.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
